# rust_pbrt_distributed

./: .gitignore  Cargo.toml  LICENSE  README.md
plugins/fbx/: Cargo.toml  build.rs
plugins/fbx/src/: lib.rs
plugins/fbx/tests/: testfbx.rs
plugins/simple_low_dependency_seq/src/: distribution.rs  lib.rs  main.rs
rpd/: Cargo.toml
rpd/src/: lib.rs
rpd/src/accelerators/: bvh.rs
rpd/src/core/: api.rs  camera.rs  coordinate_system.rs  film.rs  geometry.rs  interaction.rs  light.rs  material.rs  math.rs  mod.rs  primitive.rs  spectrum.rs  tools.rs  transform.rs
rpd/src/interface/: io.rs  mod.rs  shape.rs
rpd/src/plugins/fbx/: reader.rs
rpd/src/scene_file/: BVHAccel.fbs  bvh_accel_generated.rs  common.fbs  mesh_primitive_generated.rs  mod.rs  scene_generated.rs
rpd/src/shapes/: mesh.rs  mod.rs  sphere.rs  triangle.rs
rpd/tests/: test1.rs  test_bvh.rs  test_core.rs  test_fbx.rs  test_film.rs  test_scene_file.rs  test_sphere.rs  visualize.rs
scene_file/: Cargo.toml  genfbs.bat
scene_file/fbs/: mesh_primitive.fbs
scene_file/src/: bvh_accel.rs  camera.rs  common.rs  lib.rs  libs.rs  light.rs  material.rs  mesh_primitive.rs  scene.rs  texture.rs
scene_file/tests/: test_scene_file.rs  tools.rs
src/: main.rs
src/accelerators/: bvh.rs
src/core/: api.rs  camera.rs  coordinate_system.rs  film.rs  geometry.rs  interaction.rs  light.rs  material.rs  math.rs  mod.rs  primitive.rs  spectrum.rs  transform.rs
src/interface/: io.rs  mod.rs  shape.rs
src/shapes/: mesh.rs  mod.rs  sphere.rs  triangle.rs
tests/: test1.rs  test_bvh.rs  test_core.rs  test_fbx.rs  test_film.rs  test_sphere.rs  visualize.rs
tools/fbx/: Cargo.toml  build.rs
tools/fbx/src/: lib.rs
tools/fbx/tests/: testfbx.rs  tools.rs
tools/simple_low_dependency_seq/: Cargo.toml
tools/simple_low_dependency_seq/src/: main.rs
