[package]
name = "rpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
nalgebra-glm = "*"
ndarray = "*"
image = "*"
gli-rs = { path = "G:\\source\\gli-rs" }
#gli-rs = { git = "https://github.com/kentzhang-geek/gli-rs" }

three = "*"
genmesh="*"
mint="*"

[dev-dependencies]
three = "*"